--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -41,6 +41,27 @@
         android:background="@color/greyColor"/>
 
     <RelativeLayout
+        android:id="@+id/edit_profile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="7dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_alignParentStart="true"
+            android:text="Edit  Profile"
+            android:textColor="@color/grey_text_color"/>
+
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/greyColor"/>
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         >
